# ludamus

./: .gitignore  README.md  pyproject.toml
src/ludamus/adapters/: oauth.py
src/ludamus/adapters/db/django/: admin.py  models.py
src/ludamus/adapters/db/django/migrations/: 0001_initial.py  0002_default_site.py  0003_alter_user_options_alter_auth0user_table_and_more.py
src/ludamus/adapters/web/django/: apps.py  context_processors.py  urls.py  views.py
src/ludamus/adapters/web/django/templates/: base.html
src/ludamus/adapters/web/django/templates/web_main/: index.html  username.html
src/ludamus/config/: settings.py  urls.py
src/ludamus/deploy/: asgi.py  wsgi.py
