[project]
name = "ludamus"
version = "0.1.0"
description = "Event management website"
authors = [{ name = "fernroot", email = "arnaldojaws@gmail.com" }]
license = { text = "BSD-3-Clause license" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["authlib (>=1.6.0,<2.0.0)", "django (>=5.2.2,<6.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.13"
mypy = "^1.16.0"
poethepoet = "^0.34.0"

# POE
django-stubs = "^5.2.0"
types-authlib = "^1.5.0.20250516"

[tool.poe]
envfile = ".env"

[tool.poe.env]
PYTHONPATH = "src"
DJANGO_SETTINGS_MODULE = "ludamus.config.settings"

[tool.poe.tasks]
black = "black ."
ruff = "ruff check --fix ."
ruff-check = "ruff check ."
mypy = "mypy ."
check = ["black", "ruff", "mypy"]
dj = "django-admin"

# BLACK

[tool.black]
line-length = 88
preview = true
skip-magic-trailing-comma = true
target-version = ['py313']

# RUFF

[tool.ruff]
fix = false
line-length = 88
output-format = 'concise'
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM",
    "CPY",
    "D"
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/**.py" = ["E501", "RUF012"]

# MYPY

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = [
    "migrations/.*.py"
]
python_version = "3.13"
plugins =[
    "mypy_django_plugin.main"
]
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "ludamus.config.settings"